--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     
+     <div class="heading">
+        <h1 class="heading_1">Minesweeper</h1>
+     </div>
 </body>
 </html>
