Html and css added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
      <div class="heading">
-        <h1 class="heading_1">Minesweeper</h1>
+        <div class="background_image">
+        <h1>Minesweeper</h1>
+        </div>
      </div>
+
+     <div>
+        <a href="build/app/outputs/flutter-apk/app-arm64-v8a-release.apk">
+        <button class="btn" style="width:100%"><i class="fa fa-download"></i> Download</button>
+        </a>
+        
+     </div>
+     
 </body>
 </html>
